gitops/apps/mcp-upstream-test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-server1-route
  namespace: mcp-upstream-test
  labels:
    mcp-server: 'true'
spec:
  parentRefs:
    - name: rhcl-mcp-gw
      namespace: openshift-ingress
  hostnames:
    - 'mcp.sandbox2689.opentlc.com'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /test-server1
      backendRefs:
        - name: mcp-test-server1
          port: 9090
